# simple_scripts

./: .envrc  .gitignore  README.md  compare_directory_contents.py  download_go.py  download_jw  download_quote  empty_trash.sh  flash.sh  genpass  header.tex  image.sh  install_go.py  install_node.sh  install_starship.sh  list.py  m3umix.py  nvlc  print_fancy  print_file  print_to_home  pyproject.toml  random_mac.py  req2poetry.sh  requirements.txt  timeCalc.py  tskr.py
.vim/: coc-settings.json
bash/: bash_custom  bash_funcs
playlists/: m3ulen.py
printing/: code2pdf  header.tex  print_fancy  print_file
setup/: arch-installs.sh  bc4git.sh  install_asdf.sh  install_go.py  install_rustapps.sh  install_sublime.sh  install_zig.py  install_zigtools.sh  nerd_fonts.py  suse-installs.sh  zig.py
timeandtasks/: timeCalc.py  tskr.py
